WIP: resolving ClassDefNotFound problem in agent shutdown hook.